# SkP_6_course_31_HW

./: .gitignore  pyproject.toml
ads/: admin.py  models.py  permissions.py  serializers.py  urls.py  validators.py
ads/migrations/: 0001_initial.py  0002_initial.py
ads/views/: ad.py  cat.py  selection.py
avito/: settings.py  urls.py
data/: ads.json  categories.json  csv_to_json.py  user.json
tests/: factories.py  fixtures.py
tests/ads/: ads_create_test.py  ads_detail_test.py  ads_list_test.py
tests/selections/: selection_create_test.py
users/: admin.py  models.py  serializers.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_birth_date.py
